[package]
name = "iris-rust"
version = "0.1.0"
authors = ["Qingbao <qingbao86@gmail.com>"]
description = "Iris Recognition with Rust"
license = "MIT"
repository = "https://github.com/Qingbao/iris-rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"

